+- Added the "view-source" keybinding (default: Ctrl-U).
   Patch: Alexander Voigt
+- Introduced the domainrc mechanism for finer-grained control than
   filter_auto_requests had provided.
   Patch: p37sitdu, corvid
+- After focusing option menu, keypress will seek to next one beginning with
   that character.
 - When active tab is closed, focus the last one visited or opened.
   Patches: Jorge Arellano Cid
+- Better window titles.
   Patch: Jeremy Henty

-----------------------------------------------------------------------------

dillo-3.0.2 [December 05, 2011]

+- Digest authentication
   Patch: Justus Winter, corvid
+- text-transform property
 - If not following redirection, show body of redirecting page.
 - Middle click on stylesheet menu item opens in new tab/window.
 - Improve handling of combining characters.
 - Locale-independent ASCII character case handling (fixes Turkic locales).
   Patches: corvid
+- Rework line breaking and fix white-space:nowrap handling.
   Patch: Johannes Hofmann
+- Bind Ctrl-{PageUp,PageDown} to tab-{previous,next}.
   Patch: Jeremy Henty

-----------------------------------------------------------------------------

dillo-3.0.1 [September 21, 2011]

+- Add preference for UI theme.
 - Allow key bindings for paging left/right.
 - Privacy -- never send cookies when making third-party requests, and
   never accept cookies in the responses to these requests.
   Patches: corvid
+- Add show_quit_dialog dillorc option.
   Patch: Johannes Hofmann

-----------------------------------------------------------------------------

dillo-3.0 [September 06, 2011]

+- Ported Dillo to FLTK-1.3.
   Patch: corvid, Johannes Hofmann, Jorge Arellano Cid
+- Rewrote the User Interface: much simpler design and event handling.
 - Avoid double render after going Back or Forward (takes half the time now!).
 - Added on-the-fly panel resize (tiny/small/medium and normal/small icons).
 - Implemented a custom tabs handler (to allow fine control of it).